# Grafika

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
include/assimp/: DefaultLogger.hpp  IOStream.hpp  Importer.hpp  LogStream.hpp  Logger.hpp  NullLogger.hpp  ai_assert.h  anim.h  camera.h  cexport.h  cimport.h  color4.h  color4.inl  config.h  defs.h  importerdesc.h  material.inl  matrix3x3.h  matrix4x4.inl  metadata.h  quaternion.h  quaternion.inl  texture.h  types.h  vector3.inl
include/assimp_/: Exporter.hpp  IOSystem.hpp  ProgressHandler.hpp  cfileio.h  light.h  material.h  matrix3x3.inl  matrix4x4.h  mesh.h  postprocess.h  scene.h  vector2.h  vector2.inl  vector3.h  version.h
include/assimp_/port/AndroidJNI/: AndroidJNIIOSystem.h
include/learnopengl/: model.h
resources/objects/War tardis/: War tardis.mtl
resources/objects/amogus/: Among Us2.mtl
resources/objects/cat/: cat.mtl
resources/objects/cube/: cube.mtl
resources/objects/earth/: earth.mtl
resources/objects/ground/: ground.mtl
resources/objects/inside/: inside.mtl
resources/objects/portal/: portal.mtl
resources/objects/sand/: sand.mtl
resources/objects/sofa/: sofa.FBX  sofa.max  sofa.mtl
resources/objects/sun/: sun.mtl
resources/objects/tardis/: tardis.mtl
resources/objects/valjak/: valjak.mtl
shaders/: cubemap_fragment.fs  fragment_shader.fs  hdr.fs  instance_fragment.fs  instance_vertex.vs  lightSourceFragmentShader.fs  normal_fragment.fs  normal_vertex.vs  shadowDebug.fs  vertex_shader.vs
src/: main.cpp
